--- a/codebase/style.css
+++ b/codebase/style.css
@@ -90,13 +90,25 @@ width:90%
 footer{
   width: 100%;
   height: 300px;
-  background-color: lightgray;
+  background-color: black;
+  
 }
 
-article{
-  padding-left: 2em;
-  padding-top: 4em;
+.company ul li a {
+  color:white;
+  align-content: flex-end;
 }
+
+.support ul li a {
+  color:white;
+}
+
+.address ul li  {
+  color:red;
+  
+}
+
+
 
 
 
