--- a/codebase/style.css
+++ b/codebase/style.css
@@ -28,7 +28,7 @@ list-style:none;
 ul li a{
  
   text-decoration: none;
-  font-size: 15px;
+  font-size: larger;
   font-family: arial;
   font-weight:bold;
   padding: 0px 20px;
@@ -94,21 +94,35 @@ footer{
   
 }
 
-.company ul li a {
+.company ol li a {
+ color:white;
+ text-decoration: none;
+ font-size: 20px;
+}
+
+.support ol li a {
   color:white;
-  align-content: flex-end;
+  font-size: 20px;
+  text-decoration: none;
 }
 
-.support ul li a {
+
+.address ol li  {
   color:white;
-}
-
-.address ul li  {
-  color:red;
-  
+  font-size: 20px;
+  list-style:none;
 }
 
 
 
+.grid{
+  display: grid;
+  grid-template-columns:1fr 1fr 1fr;
+}
+
+article{
+  color: white;
+  padding: 7em;
+}
 
 
