--- a/codebase/style.css
+++ b/codebase/style.css
@@ -86,7 +86,7 @@ width:90%
   padding-top: 1em;
   width: 32%;
   height: 20%;
-  border-radius: 84px;
+  border-radius: 20px;
 }
 
 .sector2{
@@ -95,28 +95,33 @@ width:90%
   padding-right: 1em;
   width: 32%;
   height: 20%;
-  border-radius: 84px;
+  border-radius: 20px;
 }
 
 .sector3{
   padding-top: 1em;
   width: 32%;
   height: 20%;
-  border-radius: 84px;
+  border-radius: 20px;
 }
 
 footer{
   width: 100%;
   height: 300px;
-  background-color: black;
+  background-color:white;
   padding-top: 3em;
   
 }
 
+ol li{
+  list-style:none;
+}
+
 .company ol li a {
- color:white;
+ color:black;
  text-decoration: none;
  font-size: 20px;
+ 
 }
 
 .company ol li a:hover{
@@ -125,9 +130,10 @@ footer{
 }
 
 .support ol li a {
-  color:white;
+  color:black;
   font-size: 20px;
   text-decoration: none;
+  
 }
 
 .support ol li a:hover{
@@ -137,9 +143,9 @@ footer{
 
 
 .address ol li  {
-  color:white;
+  color:black;
   font-size: 20px;
-  list-style:none;
+ 
 }
 
 
