--- a/codebase/style.css
+++ b/codebase/style.css
@@ -1,7 +1,8 @@
-body{
-background-color: aliceblue;  
+* { outline: 1px dotted red }
 
-    font-family: Arial, Helvetica, sans-serif;
+body{
+   background-color: aliceblue;  
+   font-family: Arial, Helvetica, sans-serif;
 }
 
 nav {
@@ -91,6 +92,7 @@ footer{
   width: 100%;
   height: 300px;
   background-color: black;
+  padding-top: 3em;
   
 }
 
@@ -100,10 +102,20 @@ footer{
  font-size: 20px;
 }
 
+.company ol li a:hover{
+  color:red;
+  font-weight: bolder;
+}
+
 .support ol li a {
   color:white;
   font-size: 20px;
   text-decoration: none;
+}
+
+.support ol li a:hover{
+  color:red;
+  font-weight: bolder;
 }
 
 
@@ -115,9 +127,14 @@ footer{
 
 
 
-.grid{
+.sector-footer-grid{
   display: grid;
   grid-template-columns:1fr 1fr 1fr;
+}
+
+.sector-body-grid{
+  display:grid;
+  grid-template-columns:0.5fr 1fr ;
 }
 
 article{
