--- a/codebase/style.css
+++ b/codebase/style.css
@@ -1,4 +1,4 @@
-* { outline: 1px dotted red }
+/* * { outline: 1px dotted red } */
 
 body{
    background-color: aliceblue;  
@@ -59,6 +59,23 @@ ul li a:hover{
   background-repeat: no-repeat;
   background-image: url(imgsvd/digital.jpeg);
 }
+
+.sector-specific{
+  width: 100%;
+  height: 400px;
+}
+
+.content1{
+  padding-right: 1em;
+  /* border-right: 2px solid black;
+  height: 200px; */
+  /* position: absolute; */
+  /* left: 50%; */
+  /* margin-left: -3px; */
+  
+  
+}
+
 
 .wrapper{
 margin: 0 auto;
