--- a/codebase/style.css
+++ b/codebase/style.css
@@ -79,7 +79,7 @@ ul li a:hover{
 
 .wrapper{
 margin: 0 auto;
-width:90%
+width:80%;
 }
 
 .sector1{
@@ -157,7 +157,7 @@ ol li{
 
 .sector-body-grid{
   display:grid;
-  grid-template-columns:0.5fr 1fr ;
+  grid-template-columns:1fr 0.5fr ;
 }
 
 article{
@@ -165,4 +165,63 @@ article{
   padding: 7em;
 }
 
+.about-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  
+  
+}
 
+.login-card {
+  
+  width: 400px;
+  background-color:aliceblue;
+  margin: 0px auto ;
+  border-radius: 9px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  min-height:440px;
+ 
+}
+
+.log_head{ background:#4DC889; width:400px; height:120px; border-radius:9px 9px 0 0px; }
+
+.login-card h1 {
+  text-align: center;
+  font-family:open Sans;
+  color:#FFFFFF;
+  font-weight:700px;
+  font-size:20px;
+  line-height:27px;
+  padding-top: 24px;
+}
+
+.lock{ 
+  padding-left:175px; width:30px; height:25px; padding-top:0px;
+}
+
+.log_body{ 
+  
+  padding:40px 20px 20px 20px;
+  background-color: aliceblue;
+}
+
+.log_user{
+   background:#FEFEFE; color:black; border-radius: 10px; width:349px; height:31px; padding:5px; font-family:open Sans; font-weight:700px; font-size:15px; border:none;
+   }
+
+.log_Pass{
+  background:#FEFEFE; color:black; border-radius: 10px; width:349px; height:31px; padding:5px; font-family:open Sans; font-weight:700px; font-size:15px; border:none;
+}
+
+
+.login-submit{ 
+  background:#4DC889; border:none; border-radius: 10px; width:359px; height:36px; cursor:pointer; font-family:open Sans; font-weight:700px; font-size:15px; color:#FFFFFF; 
+}
+
+.login-submit:hover{
+  background:darkgreen;
+}
+
+.log_body a{ 
+  text-decoration:none; color:#78EEB2; font-family:open Sans; font-weight:900px; font-size:15px; line-height:21px;
+}
